logs/Interfaces_0.5.log
>>> 'Pkg.add("Interfaces")' log
INFO: Cloning cache of Interfaces from https://github.com/Rory-Finnegan/Interfaces.jl.git
INFO: Installing Interfaces v0.0.4
INFO: Building Interfaces
/home/vagrant/.julia/v0.5/Interfaces/deps/src/mutable_union.c: In function ‘jl_type_mutable_union_append’:
/home/vagrant/.julia/v0.5/Interfaces/deps/src/mutable_union.c:49:9: error: implicit declaration of function ‘jl_svec_append’ [-Werror=implicit-function-declaration]
         jl_svec_t *new_types = jl_svec_append(_union->types, jl_svec_fill(1, t));
         ^
/home/vagrant/.julia/v0.5/Interfaces/deps/src/mutable_union.c:49:32: error: initialization makes pointer from integer without a cast [-Werror]
         jl_svec_t *new_types = jl_svec_append(_union->types, jl_svec_fill(1, t));
                                ^
cc1: all warnings being treated as errors
=============================[ ERROR: Interfaces ]==============================

LoadError: failed process: Process(`gcc -c -Wall -Werror -fPIC -I/home/vagrant/julia/bin/../include/julia /home/vagrant/.julia/v0.5/Interfaces/deps/src/mutable_union.c -o /home/vagrant/.julia/v0.5/Interfaces/deps/usr/lib/mutable_union.o`, ProcessExited(1)) [1]
while loading /home/vagrant/.julia/v0.5/Interfaces/deps/build.jl, in expression starting on line 13

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: Interfaces had build errors.

 - packages with build errors remain installed in /home/vagrant/.julia/v0.5
 - build the package(s) and all dependencies with `Pkg.build("Interfaces")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated
INFO: METADATA is out-of-date — you may not have the latest version of Interfaces
INFO: Use `Pkg.update()` to get the latest versions of your packages

>>> 'Pkg.test("Interfaces")' log
Julia Version 0.5.0-dev+2918
Commit 1eacbbb (2016-02-28 16:56 UTC)
Platform Info:
  System: Linux (x86_64-unknown-linux-gnu)
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz
  WORD_SIZE: 64
  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas64_
  LIBM: libopenlibm
  LLVM: libLLVM-3.7.1
INFO: Testing Interfaces
ERROR: LoadError: LoadError: could not load library "/home/vagrant/.julia/v0.5/Interfaces/test/../src/../deps/usr/lib/lib_mutable_union.so"
/home/vagrant/.julia/v0.5/Interfaces/test/../src/../deps/usr/lib/lib_mutable_union.so: cannot open shared object file: No such file or directory
 [inlined code] from ./c.jl:89
 in dlopen(::ASCIIString, ::UInt32) at ./libdl.jl:66 (repeats 2 times)
 in include(::UTF8String) at ./boot.jl:264
 in include_from_node1(::ASCIIString) at ./loading.jl:417
 in include(::ASCIIString) at ./boot.jl:264
 in include_from_node1(::UTF8String) at ./loading.jl:417
 in process_options(::Base.JLOptions) at ./client.jl:262
 in _start() at ./client.jl:318
while loading /home/vagrant/.julia/v0.5/Interfaces/test/../src/Interfaces.jl, in expression starting on line 8
while loading /home/vagrant/.julia/v0.5/Interfaces/test/runtests.jl, in expression starting on line 1
=============================[ ERROR: Interfaces ]==============================

failed process: Process(`/home/vagrant/julia/bin/julia -Cx86-64 -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --check-bounds=yes --code-coverage=none --color=no /home/vagrant/.julia/v0.5/Interfaces/test/runtests.jl`, ProcessExited(1)) [1]

================================================================================
ERROR: Base.Pkg.PkgError("Interfaces had test errors")
 in #test#55(::Bool, ::Any, ::Array{AbstractString,1}) at ./pkg/entry.jl:671
 [inlined code] from ./boot.jl:331
 in (::Base.Pkg.Dir.##2#3{Array{Any,1},Base.Pkg.Entry.#test,Tuple{Array{AbstractString,1}}})() at ./pkg/dir.jl:31
 in cd(::Base.Pkg.Dir.##2#3{Array{Any,1},Base.Pkg.Entry.#test,Tuple{Array{AbstractString,1}}}, ::UTF8String) at ./file.jl:48
 in #cd#1(::Array{Any,1}, ::Any, ::Any, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1}}) at ./pkg/dir.jl:31
 [inlined code] from ./boot.jl:331
 in #test#4(::Bool, ::Any, ::ASCIIString, ::Vararg{ASCIIString}) at ./pkg.jl:228
 in eval(::Module, ::Any) at ./boot.jl:267
 [inlined code] from ./sysimg.jl:14
 in process_options(::Base.JLOptions) at ./client.jl:239
 in _start() at ./client.jl:318

>>> End of log
